# project-templates

devcontainer-empty/: cookiecutter.json
devcontainer-empty/{{ cookiecutter.project_slug }}/.devcontainer/: devcontainer.json
go-hello-world/: cookiecutter.json
go-hello-world/{{ cookiecutter.project_slug }}/: go.mod
go-hello-world/{{ cookiecutter.project_slug }}/.devcontainer/: devcontainer.json
java-17-hello-world/: cookiecutter.json
java-17-hello-world/{{ cookiecutter.project_slug }}/: pom.xml
java-20-hello-world/{{ cookiecutter.project_slug }}/: pom.xml
java-21-hello-world/: cookiecutter.json
java-21-hello-world/{{ cookiecutter.project_slug }}/: pom.xml
jmeter-docker-compose/: cookiecutter.json
jmeter-docker-compose/{{ cookiecutter.project_slug }}/: compose.yml  jmeter.Dockerfile  rmi_keystore.jks  run.sh
jmeter-docker-compose/{{ cookiecutter.project_slug }}/test/: test.jmx  (+1 more)
postgresql-docker-compose/: cookiecutter.json
postgresql-docker-compose/{{ cookiecutter.project_slug }}/: .env  README.md  TODOs.md  compose.yaml
python3-cli-hello-world/: cookiecutter.json
python3-cli-hello-world/{{ cookiecutter.project_slug }}/: .gitignore  .python-version  README.md  pyproject.toml  setup.py
python3-cli-hello-world/{{ cookiecutter.project_slug }}/.devcontainer/: devcontainer.json
python3-cli-hello-world/{{ cookiecutter.project_slug }}/src/{{ cookiecutter.owner_namespace }}/{{ cookiecutter.project_package }}/: __main__.py
python3-cli-hello-world/{{ cookiecutter.project_slug }}/src/{{ cookiecutter.python_package }}/: __init__.py  __main__.py  {{ cookiecutter.python_module }}.py
python3-cli-hello-world/{{ cookiecutter.project_slug }}/tests/: test_main.py
python3-notebook-hello-world/: cookiecutter.json
python3-notebook-hello-world/{{ cookiecutter.project_slug }}/: .gitignore  README.md  requirements.txt  testnotebook.ipynb
python3-pip-library-package/: cookiecutter.json
python3-pip-library-package/{{ cookiecutter.project_slug }}/: README.md  pyproject.toml
python3-pip-library-package/{{ cookiecutter.project_slug }}/.devcontainer/: devcontainer.json  postCreateCommands
python3-pip-library-package/{{ cookiecutter.project_slug }}/tests/: test_{{ cookiecutter.project_module }}.py
r-hello-world/: cookiecutter.json
r-hello-world/{{ cookiecutter.project_slug }}/: hello  hello-notebook.ipynb
rust-hello-world/: cookiecutter.json
rust-hello-world/{{ cookiecutter.project_slug }}/: Cargo.toml
snowflake-empty/: README.md  cookiecutter.json
snowflake-empty/{{ cookiecutter.project_slug }}/: README.md
terraform-github-actions-hello-world/: README.md  cookiecutter.json
terraform-github-actions-hello-world/{{ cookiecutter.project_slug }}/: README.md  main.tf  variables.tf
terraform-hello-world/: README.md
terraform-hello-world/{{ cookiecutter.project_slug }}/: README.md  main.tf  outputs.tf  variables.tf
(+31 files in other folders)
