[project]
name="{{ cookiecutter.project_name }}"
version="{{ cookiecutter.project_version }}"
description="{{ cookiecutter.project_description }}"

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend="setuptools.build_meta"

[project.scripts]
{{ cookiecutter.cli_command }} = "{{ cookiecutter.python_package }}.{{ cookiecutter.python_module }}:{{ cookiecutter.main_function }}"

[tool.setuptools.packages.find]
where = ["src"]

