[project]
name="{{ cookiecutter.project_name }}"
version="{{ cookiecutter.project_version }}"
authors = [
    { name="{{ cookiecutter.author_name }}", email="{{ cookiecutter.author_email }}" }
]
description="{{ cookiecutter.project_description }}"
license = "MIT"
license-files = ["LICENSE"]
readme="README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
test = [
    "pytest==8.4.0"
]

[project.scripts]
{{ cookiecutter.cli_command }} = "{{ cookiecutter.owner_namespace }}.{{ cookiecutter.project_package }}.{{ cookiecutter.project_module }}:{{ cookiecutter.main_function }}"

[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.owner_namespace }}"]

[tool.setuptools.packages.find]
where = ["src"]
