[project]
name="{{ cookiecutter.project_name }}"
version="{{ cookiecutter.project_version }}"
description="{{ cookiecutter.project_description }}"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
test = [
    "pytest==8.4.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.owner_namespace }}"]